# pomodoro-cli

./: Cargo.toml  README.md
src/: app.rs  main.rs  ui.rs
src/application/: event_handler.rs  mod.rs  runner.rs
src/components/: dog.rs  mod.rs  progress_bar.rs
src/domain/: entities.rs  mod.rs  repository.rs  value_objects.rs
src/infrastructure/: mod.rs  persistence.rs  terminal.rs
src/presentation/: mod.rs  tui.rs
src/presentation/components/: dog.rs  menu.rs  mod.rs  progress_bar.rs  speech_bubble.rs  task_input.rs
