[package]
name = "pomodog"
version = "0.1.0"
edition = "2024"

[lib]
name = "pomodog_lib"
path = "src/lib.rs"

[[bin]]
name = "pomodog"
path = "src/main.rs"

[dependencies]
ratatui = "0.29.0"
crossterm = "0.28.1"
anyhow = "1.0.95"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "5.0"